# KnowledgeBase

./: .dockerignore  .env  .gitignore  .gitmodules  DOCKER_README.md  Dockerfile  README.md  build.sh  compress.cmd  config.py  database.py  demo_embedding.py  demo_nlp.py  demo_search_definition.py  docker-compose.yml  embedding.py  load_pdf.py  log.py  main.py  makefile  model.py  nginx.conf  pyproject.toml  start.sh  supervisord.conf  test.py  设计文档.md
.github/workflows/: docker-build-and-save.yml
routes/: file.py  search.py  swaggerui.py
service/: embedding.py  search.py  splitter.py
utils/: cache.py  definition.py  embedding.py  hash.py  llm.py  relation.py
