[project]
name = "knowledgebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "langchain-community>=0.4.1",
    "pdfplumber>=0.11.7",
    "chromadb>=0.5.18",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "tqdm>=4.67.1",
    "pip>=25.3",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
]
